newplot binded partially, chart is there in the tests but traces are not

--- a/WebSharper.Plotly.Tests/wwwroot/index.html
+++ b/WebSharper.Plotly.Tests/wwwroot/index.html
@@ -23,6 +23,7 @@
             <div>You are about to add: ${Name}</div>
         </div>
     </div>
+    <div id="myDiv"></div>
     <script type="text/javascript" src="Content/WebSharper.Plotly.Tests.min.js"></script>
 </body>
 </html>
