--- a/WebSharper.Plotly.Tests/index.html
+++ b/WebSharper.Plotly.Tests/index.html
@@ -5,6 +5,12 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="wwwroot\Content\WebSharper.Plotly.Tests.css" />
+        <style>
+            #main {
+                padding-left: 25%;
+                padding-right: 25%;
+            }
+        </style>
         <script type="text/javascript" src="wwwroot\Content\WebSharper.Plotly.Tests.head.js"></script>
     </head>
     <body>
