--- a/WebSharper.Plotly.Tests/index.html
+++ b/WebSharper.Plotly.Tests/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>PlotlyJS_Sample_Page</title>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="wwwroot\Content\WebSharper.Plotly.Tests.css" />
-        <style>
-            #main {
-                padding-left: 25%;
-                padding-right: 25%;
-            }
-        </style>
-        <script type="text/javascript" src="wwwroot\Content\WebSharper.Plotly.Tests.head.js"></script>
-    </head>
-    <body>
-        <div id="main">
-        </div>
-        <script type="text/javascript" src="wwwroot\Content\WebSharper.Plotly.Tests.min.js"></script>
-    </body>
+
+<head>
+    <title>PlotlyJS_Sample_Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="text/javascript" src="wwwroot\plotly-locale-fr.js"></script>
+    <link rel="stylesheet" href="wwwroot\Content\WebSharper.Plotly.Tests.css" />
+    <style>
+        #main {
+            padding-left: 25%;
+            padding-right: 25%;
+        }
+    </style>
+    <script type="text/javascript" src="wwwroot\Content\WebSharper.Plotly.Tests.head.js"></script>
+</head>
+
+<body>
+    <div id="main">
+    </div>
+    <script type="text/javascript" src="wwwroot\Content\WebSharper.Plotly.Tests.min.js"></script>
+</body>
+
 </html>
