--- a/Content/WebSharper.Plotly.Tests.head.html
+++ b/Content/WebSharper.Plotly.Tests.head.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.plot.ly/plotly-2.2.1.min.js" type="text/javascript" charset="UTF-8"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/plotly.js/2.2.1/plotly-locale-fr.min.js" type="text/javascript" charset="UTF-8"></script><!--[if lte IE 11.0]>
+<!--[if lte IE 11.0]>
 <![endif]-->
 <!--[if lte IE 9.0]>
 <![endif]-->
