--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <title>PlotlyJS_Sample_Page</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Content\WebSharper.Plotly.Tests.css" />
+    <!--<link rel="stylesheet" href="Scripts\WebSharper.Plotly.Tests.css" />-->
     <style>
         #main {
             padding-left: 10%;
             padding-right: 10%;
         }
     </style>
-    <script type="text/javascript" src="Content\WebSharper.Plotly.Tests.head.js"></script>
 </head>
 
 <body>
     <div id="main">
     </div>
-    <script type="text/javascript" src="Content\WebSharper.Plotly.Tests.min.js"></script>
+    <script type="text/javascript" src="Scripts\WebSharper.Plotly.Tests.min.js"></script>
 </body>
 
 </html>
